Foundation Training/4.4-policy-e2e-workflow-lab/stage2/2-bank-info.yaml
# Copyright (c) 2017 Tigera, Inc. All rights reserved.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: storefront
  name: bankinfo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bankinfo
        fw-zone: trusted
    spec:
      containers:
      - name: bankinfo
        image: bikramkgupta/ubuntu18_tester_bg:18.05
        command: ["/bin/sleep","infinity"]
        #command: ["/bin/sh","-c"]
        #args: ["while true; do curl https://database:2379/v2/keys?recursive=true --key /etc/certs/key.pem --cert /etc/certs/cert-chain.pem; sleep 5; done "]
