Foundation Training/4.4-policy-e2e-workflow-lab/stage2/feodo-block-policy.yaml
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: security.block-feodo
spec:
  tier: security
  order: 210
  selector:  all()
  types:
  - Egress
  egress:
  - action: Deny
    destination:
      selector: threatfeed == 'feodo'
